After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770753 - gst-libav 1.8.3 increases ffmpeg dependency vs 1.8.2
gst-libav 1.8.3 increases ffmpeg dependency vs 1.8.2
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-libav
1.8.3
Other Linux
: Normal blocker
: 1.8.4
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2016-09-02 13:47 UTC by Iain Lane
Modified: 2017-02-04 16:26 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Only use AV_CODEC_ID_WRAPPED_AVFRAME on new enough libavcodecs (1.87 KB, patch)
2016-09-02 15:57 UTC, Iain Lane
committed Details | Review

Description Iain Lane 2016-09-02 13:47:30 UTC
Building 1.8.3 on Ubuntu xenial (ffmpeg 2.8.6) results in:

gstavvidenc.c: In function ‘gst_ffmpegvidenc_register’:
gstavvidenc.c:970:29: error: ‘AV_CODEC_ID_WRAPPED_AVFRAME’ undeclared (first use in this function)
         || in_plugin->id == AV_CODEC_ID_WRAPPED_AVFRAME) {

which seems to have been introduced in:

laney@raleigh (master|✔)> git tag --contains 00332e0a0
n3.0
n3.0.1
n3.0.2
n3.1
n3.1-dev
n3.1.1
n3.1.2
n3.1.3
n3.2-dev

...so it has an increased ffmpeg requirement, which I suppose isn't desirable in a stable series.
Comment 1 Sebastian Dröge (slomo) 2016-09-02 13:53:50 UTC
I'm surprised 1.8 worked properly with ffmpeg < 3.0. But yes, that one should be made conditional on the ffmpeg version with an #ifdef.

Do you want to provide a patch?
Comment 2 Iain Lane 2016-09-02 15:57:23 UTC
Created attachment 334659 [details] [review]
Only use AV_CODEC_ID_WRAPPED_AVFRAME on new enough libavcodecs

Ok then - hope this is what you had in mind. I didn't find a better thing to
Comment 3 Iain Lane 2016-09-02 15:58:18 UTC
#if/#ifdef on. (git-bz ate that)
Comment 4 Sebastian Dröge (slomo) 2016-09-02 16:07:30 UTC
Comment on attachment 334659 [details] [review]
Only use AV_CODEC_ID_WRAPPED_AVFRAME on new enough libavcodecs

Yes, thanks. Will merge later
Comment 5 Sebastian Dröge (slomo) 2016-09-03 11:20:50 UTC
Attachment 334659 [details] pushed as f5f3298 - Only use AV_CODEC_ID_WRAPPED_AVFRAME on new enough libavcodecs
Comment 6 Doug McMahon 2017-02-04 14:11:34 UTC
This breaks wma decoding when using ffmpeg < 3.x
Comment 7 Sebastian Dröge (slomo) 2017-02-04 16:26:26 UTC
How is the attached patch breaking WMA decoding? Or you mean the update from 1.8.2 to 1.8.3 in one way or another broke that (please file a separate bug for that, including the exact ffmpeg version you use and how it fails).