Only use AV_CODEC_ID_WRAPPED_AVFRAME on new enough libavcodecs

https://bugzilla.gnome.org/show_bug.cgi?id=770753